2014-06-20  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #17069]
	* posix/regcomp.c (parse_reg_exp): Deallocate partially
	constructed tree before returning error.
	* posix/bug-regexp36.c: Expand test case.

2014-06-19  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #17069]
	* posix/regcomp.c (parse_expression): Deallocate partially
	constructed tree before returning error.
	* posix/Makefile.c (tests): Add bug-regex36.
	(generated): Add bug-regex36.mtrace.
	(tests-special): Add $(objpfx)bug-regex36-mem.out
	(bug-regex36-ENV): New variable.
	($(objpfx)bug-regex36-mem.out): New rule.
	* posix/bug-regex36.c: New file.

2014-06-03  Andreas Schwab  <schwab@suse.de>

	[BZ #15946]
	* resolv/res_send.c (send_dg): Reload file descriptor after
	calling reopen.

2014-02-18  Andreas Schwab  <schwab@suse.de>

	[BZ #16574]
	* resolv/res_send.c (send_vc): Add parameter ansp2_malloced.
	Store non-zero if the second buffer was newly allocated.
	(send_dg): Likewise.
	(__libc_res_nsend): Add parameter ansp2_malloced and pass it down
	to send_vc and send_dg.
	(res_nsend): Pass NULL for ansp2_malloced.
	* resolv/res_query.c (__libc_res_nquery): Add parameter
	answerp2_malloced and pass it down to __libc_res_nsend.
	(res_nquery): Pass additional NULL to __libc_res_nquery.
	(__libc_res_nsearch): Add parameter answerp2_malloced and pass it
	down to __libc_res_nquery and __libc_res_nquerydomain.  Deallocate
	second answer buffer if answerp2_malloced was set.
	(res_nsearch): Pass additional NULL to __libc_res_nsearch.
	(__libc_res_nquerydomain): Add parameter
	answerp2_malloced and pass it down to __libc_res_nquery.
	(res_nquerydomain): Pass additional NULL to
	__libc_res_nquerydomain.
	* resolv/nss_dns/dns-network.c (_nss_dns_getnetbyname_r): Pass
	additional NULL to __libc_res_nsend and __libc_res_nquery.
	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyname3_r): Pass
	additional NULL to __libc_res_nsearch.
	(_nss_dns_gethostbyname4_r): Revert last change.  Use new